fix(bubbles): ensure DefaultDataSource items list is mutable